change url href tag a

--- a/category.html
+++ b/category.html
@@ -44,7 +44,7 @@
               <span class="bottom-bun"></span>
             </div>
             
-            <a href="./index.html">
+            <a href="/">
               <h6 id="logo" class="text-3xl lg:text-4xl font-black font-serif sm:w-fit sm:visible sm:opacity-100 transition-all ease-in duration-150">
                 SHOP.CO
               </h6>
