--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <span class="bottom-bun"></span>
             </div>
             
-            <a href="./index.html">
+            <a href="/">
               <h6 id="logo" class="text-3xl lg:text-4xl font-black font-serif sm:w-fit sm:visible sm:opacity-100 transition-all ease-in duration-150">
                 SHOP.CO
               </h6>
@@ -71,7 +71,7 @@
                         <!-- handlebars -->
                           {{#collection}}
                           <li class="py-1">
-                            <a href="./product-detail.html" class="flex items-center hover-increase-width pl-5">
+                            <a href="/product-detail.html" class="flex items-center hover-increase-width pl-5">
                               <div class="w-0 hover-increase-width-content h-0.5 bg-black transition-all duration-500 ease">
                               </div>
                               <span class="hover-translate transition-all duration-500 ease">
@@ -165,7 +165,7 @@
                   {{#each collection}}
                   <li class="rounded-full hover:font-semibold hover:bg-black hover:text-white
                   transition-all ease-in duration-150">
-                    <a href="./product-detail.html" class="py-3 w-full flex justify-center">
+                    <a href="/product-detail.html" class="py-3 w-full flex justify-center">
                       {{span}}
                     </a>
                   </li>
@@ -346,7 +346,7 @@
             </ul>
           </div>
           <button class="block mx-auto w-full">
-            <a href="./category.html" class="block sm:inline-block text-base font-medium px-20 py-3.5 border rounded-full hover:bg-black hover:text-white transition-all ease  duration-300">
+            <a href="/category.html" class="block sm:inline-block text-base font-medium px-20 py-3.5 border rounded-full hover:bg-black hover:text-white transition-all ease  duration-300">
               View All
             </a>
           </button>
@@ -432,7 +432,7 @@
           <div class="py-7 lg:py-0">
             <div class="md:flex">
               <div class="w-full h-48 sm:h-64 lg:h-72 flex md:basis-2/5 md:pr-8">
-                <a href="./category.html" class="group bg-white rounded-3xl h-full w-full overflow-hidden relative">
+                <a href="/category.html" class="group bg-white rounded-3xl h-full w-full overflow-hidden relative">
                   <div class="group-hover:animate-shine absolute top-0 -right-1/2 block w-1/4 h-full z-10 bg-gradient-to-l from-white/60 skew-x-[45deg]"></div>
                   <img class="h-full absolute right-0 object-cover
                   group-hover:brightness-105 transition-all ease-in duration-150 lazy"
