--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Home</title>
+      <title>Shop.CO - Buy the best products</title>
       <link href="./src/index.less" rel="stylesheet" />
       <link
          href="https://api.fontshare.com/v2/css?f[]=satoshi@300,301,400,401,500,501,700,701,900,901,1,2&display=swap"
@@ -58,7 +58,7 @@
                         <span class="bottom-bun"></span>
                      </div>
 
-                     <a href="/" title="Shop.CO - Buy the best products">
+                     <a href="/">
                         <h6
                            class="text-3xl lg:text-4xl font-black font-serif sm:w-fit sm:visible sm:opacity-100 transition-all ease-in duration-150"
                         >
