--- a/public/footer.html
+++ b/public/footer.html
@@ -104,7 +104,7 @@
                </svg>
             </div>
             <div class="mt-6 lg:mt-0 grid grid-cols-2 lg:flex-1 lg:flex justify-between gap-y-6">
-               {{#AboutUs}}
+               {{#each items}}
                <div class="flex flex-col">
                   <h6 class="uppercase text-base font-medium tracking-[3px]">{{h6}}</h6>
                   <ul class="mt-6 flex-1 flex flex-col gap-y-3 lg:gap-y-0 lg:justify-between opacity-60">
@@ -113,7 +113,7 @@
                      {{/lis}}
                   </ul>
                </div>
-               {{/AboutUs}}
+               {{/each}}
             </div>
          </div>
          <div class="mt-3 flex flex-col md:flex-row justify-between items-center">
