fix UI filter page category

--- a/category.html
+++ b/category.html
@@ -83,47 +83,45 @@
                   <!-- filter -->
                   <div
                      id="filter"
-                     class="lg:w-1/4 lg:h-fit lg:mr-5 rounded-t-2xl lg:rounded-2xl border-2 overflow-auto overscroll-contain bg-white invisible opacity-0 lg:visible lg:opacity-100 transition-all ease-out duration-500 fixed top-full lg:top-0 left-0 bottom-0 right-0 z-40 lg:z-0 lg:relative"
+                     class="py-5 px-6 sm:h-screen lg:h-fit lg:w-1/4 lg:mr-5 rounded-tr-2xl rounded-tl-2xl sm:rounded-tl-none sm:rounded-r-xl lg:rounded-2xl border-2 bg-white invisible opacity-0 lg:visible lg:opacity-100 transition-all ease-out duration-500 fixed sm:w-80 inset-0 top-full sm:top-0 sm:-left-full lg:left-0 z-40 lg:z-0 lg:relative"
                   >
-                     <div class="h-fit py-5 px-6">
-                        <div class="flex flex-col gap-6 overflow-hidden">
-                           <div
-                              class="fixed z-50 -mt-5 pt-5 bg-white left-6 right-6 lg:relative lg:left-0 lg:right-0 pb-6 border-b flex items-center justify-between"
-                           >
-                              <span class="text-xl font-bold">Filters</span>
-                              <div
-                                 class="cursor-pointer opacity-40 hover:opacity-100 transition-all ease-in duration-150"
+                     <div class="h-full flex flex-col gap-6">
+                        <div
+                           class="-mt-5 pt-5 bg-white left-6 right-6 lg:relative lg:left-0 lg:right-0 pb-6 border-b flex items-center justify-between"
+                        >
+                           <span class="text-xl font-bold">Filters</span>
+                           <div class="cursor-pointer opacity-40 hover:opacity-100 transition-all ease-in duration-150">
+                              <svg
+                                 class="hidden lg:block"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 width="24"
+                                 height="25"
+                                 viewBox="0 0 24 25"
+                                 fill="none"
                               >
-                                 <svg
-                                    class="hidden lg:block"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                    width="24"
-                                    height="25"
-                                    viewBox="0 0 24 25"
-                                    fill="none"
-                                 >
-                                    <path
-                                       d="M13.125 12.125V20.75C13.125 21.0484 13.0065 21.3345 12.7955 21.5455C12.5845 21.7565 12.2984 21.875 12 21.875C11.7016 21.875 11.4155 21.7565 11.2045 21.5455C10.9935 21.3345 10.875 21.0484 10.875 20.75V12.125C10.875 11.8266 10.9935 11.5405 11.2045 11.3295C11.4155 11.1185 11.7016 11 12 11C12.2984 11 12.5845 11.1185 12.7955 11.3295C13.0065 11.5405 13.125 11.8266 13.125 12.125ZM18.75 18.5C18.4516 18.5 18.1655 18.6185 17.9545 18.8295C17.7435 19.0405 17.625 19.3266 17.625 19.625V20.75C17.625 21.0484 17.7435 21.3345 17.9545 21.5455C18.1655 21.7565 18.4516 21.875 18.75 21.875C19.0484 21.875 19.3345 21.7565 19.5455 21.5455C19.7565 21.3345 19.875 21.0484 19.875 20.75V19.625C19.875 19.3266 19.7565 19.0405 19.5455 18.8295C19.3345 18.6185 19.0484 18.5 18.75 18.5ZM21 14.75H19.875V4.25C19.875 3.95163 19.7565 3.66548 19.5455 3.4545C19.3345 3.24353 19.0484 3.125 18.75 3.125C18.4516 3.125 18.1655 3.24353 17.9545 3.4545C17.7435 3.66548 17.625 3.95163 17.625 4.25V14.75H16.5C16.2016 14.75 15.9155 14.8685 15.7045 15.0795C15.4935 15.2905 15.375 15.5766 15.375 15.875C15.375 16.1734 15.4935 16.4595 15.7045 16.6705C15.9155 16.8815 16.2016 17 16.5 17H21C21.2984 17 21.5845 16.8815 21.7955 16.6705C22.0065 16.4595 22.125 16.1734 22.125 15.875C22.125 15.5766 22.0065 15.2905 21.7955 15.0795C21.5845 14.8685 21.2984 14.75 21 14.75ZM5.25 15.5C4.95163 15.5 4.66548 15.6185 4.4545 15.8295C4.24353 16.0405 4.125 16.3266 4.125 16.625V20.75C4.125 21.0484 4.24353 21.3345 4.4545 21.5455C4.66548 21.7565 4.95163 21.875 5.25 21.875C5.54837 21.875 5.83452 21.7565 6.0455 21.5455C6.25647 21.3345 6.375 21.0484 6.375 20.75V16.625C6.375 16.3266 6.25647 16.0405 6.0455 15.8295C5.83452 15.6185 5.54837 15.5 5.25 15.5ZM7.5 11.75H6.375V4.25C6.375 3.95163 6.25647 3.66548 6.0455 3.4545C5.83452 3.24353 5.54837 3.125 5.25 3.125C4.95163 3.125 4.66548 3.24353 4.4545 3.4545C4.24353 3.66548 4.125 3.95163 4.125 4.25V11.75H3C2.70163 11.75 2.41548 11.8685 2.2045 12.0795C1.99353 12.2905 1.875 12.5766 1.875 12.875C1.875 13.1734 1.99353 13.4595 2.2045 13.6705C2.41548 13.8815 2.70163 14 3 14H7.5C7.79837 14 8.08452 13.8815 8.2955 13.6705C8.50647 13.4595 8.625 13.1734 8.625 12.875C8.625 12.5766 8.50647 12.2905 8.2955 12.0795C8.08452 11.8685 7.79837 11.75 7.5 11.75ZM14.25 7.25H13.125V4.25C13.125 3.95163 13.0065 3.66548 12.7955 3.4545C12.5845 3.24353 12.2984 3.125 12 3.125C11.7016 3.125 11.4155 3.24353 11.2045 3.4545C10.9935 3.66548 10.875 3.95163 10.875 4.25V7.25H9.75C9.45163 7.25 9.16548 7.36853 8.9545 7.5795C8.74353 7.79048 8.625 8.07663 8.625 8.375C8.625 8.67337 8.74353 8.95952 8.9545 9.1705C9.16548 9.38147 9.45163 9.5 9.75 9.5H14.25C14.5484 9.5 14.8345 9.38147 15.0455 9.1705C15.2565 8.95952 15.375 8.67337 15.375 8.375C15.375 8.07663 15.2565 7.79048 15.0455 7.5795C14.8345 7.36853 14.5484 7.25 14.25 7.25Z"
-                                       fill="black"
-                                    />
-                                 </svg>
-                                 <!-- handle-filter mobile -->
-                                 <svg
-                                    class="lg:hidden handle-filter"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                    width="24"
-                                    height="25"
-                                    viewBox="0 0 24 25"
-                                    fill="none"
-                                 >
-                                    <path
-                                       d="M19.5459 18.4541C19.7572 18.6654 19.876 18.952 19.876 19.2509C19.876 19.5498 19.7572 19.8365 19.5459 20.0478C19.3346 20.2592 19.0479 20.3779 18.749 20.3779C18.4501 20.3779 18.1635 20.2592 17.9521 20.0478L12 14.0937L6.0459 20.0459C5.83455 20.2573 5.54791 20.376 5.24902 20.376C4.95014 20.376 4.66349 20.2573 4.45215 20.0459C4.2408 19.8346 4.12207 19.5479 4.12207 19.2491C4.12207 18.9502 4.2408 18.6635 4.45215 18.4522L10.4062 12.5L4.45402 6.54593C4.24268 6.33459 4.12395 6.04795 4.12395 5.74906C4.12395 5.45017 4.24268 5.16353 4.45402 4.95218C4.66537 4.74084 4.95201 4.62211 5.2509 4.62211C5.54978 4.62211 5.83643 4.74084 6.04777 4.95218L12 10.9062L17.954 4.95125C18.1654 4.7399 18.452 4.62117 18.7509 4.62117C19.0498 4.62117 19.3364 4.7399 19.5478 4.95125C19.7591 5.16259 19.8778 5.44924 19.8778 5.74812C19.8778 6.04701 19.7591 6.33365 19.5478 6.545L13.5937 12.5L19.5459 18.4541Z"
-                                       fill="black"
-                                    />
-                                 </svg>
-                              </div>
+                                 <path
+                                    d="M13.125 12.125V20.75C13.125 21.0484 13.0065 21.3345 12.7955 21.5455C12.5845 21.7565 12.2984 21.875 12 21.875C11.7016 21.875 11.4155 21.7565 11.2045 21.5455C10.9935 21.3345 10.875 21.0484 10.875 20.75V12.125C10.875 11.8266 10.9935 11.5405 11.2045 11.3295C11.4155 11.1185 11.7016 11 12 11C12.2984 11 12.5845 11.1185 12.7955 11.3295C13.0065 11.5405 13.125 11.8266 13.125 12.125ZM18.75 18.5C18.4516 18.5 18.1655 18.6185 17.9545 18.8295C17.7435 19.0405 17.625 19.3266 17.625 19.625V20.75C17.625 21.0484 17.7435 21.3345 17.9545 21.5455C18.1655 21.7565 18.4516 21.875 18.75 21.875C19.0484 21.875 19.3345 21.7565 19.5455 21.5455C19.7565 21.3345 19.875 21.0484 19.875 20.75V19.625C19.875 19.3266 19.7565 19.0405 19.5455 18.8295C19.3345 18.6185 19.0484 18.5 18.75 18.5ZM21 14.75H19.875V4.25C19.875 3.95163 19.7565 3.66548 19.5455 3.4545C19.3345 3.24353 19.0484 3.125 18.75 3.125C18.4516 3.125 18.1655 3.24353 17.9545 3.4545C17.7435 3.66548 17.625 3.95163 17.625 4.25V14.75H16.5C16.2016 14.75 15.9155 14.8685 15.7045 15.0795C15.4935 15.2905 15.375 15.5766 15.375 15.875C15.375 16.1734 15.4935 16.4595 15.7045 16.6705C15.9155 16.8815 16.2016 17 16.5 17H21C21.2984 17 21.5845 16.8815 21.7955 16.6705C22.0065 16.4595 22.125 16.1734 22.125 15.875C22.125 15.5766 22.0065 15.2905 21.7955 15.0795C21.5845 14.8685 21.2984 14.75 21 14.75ZM5.25 15.5C4.95163 15.5 4.66548 15.6185 4.4545 15.8295C4.24353 16.0405 4.125 16.3266 4.125 16.625V20.75C4.125 21.0484 4.24353 21.3345 4.4545 21.5455C4.66548 21.7565 4.95163 21.875 5.25 21.875C5.54837 21.875 5.83452 21.7565 6.0455 21.5455C6.25647 21.3345 6.375 21.0484 6.375 20.75V16.625C6.375 16.3266 6.25647 16.0405 6.0455 15.8295C5.83452 15.6185 5.54837 15.5 5.25 15.5ZM7.5 11.75H6.375V4.25C6.375 3.95163 6.25647 3.66548 6.0455 3.4545C5.83452 3.24353 5.54837 3.125 5.25 3.125C4.95163 3.125 4.66548 3.24353 4.4545 3.4545C4.24353 3.66548 4.125 3.95163 4.125 4.25V11.75H3C2.70163 11.75 2.41548 11.8685 2.2045 12.0795C1.99353 12.2905 1.875 12.5766 1.875 12.875C1.875 13.1734 1.99353 13.4595 2.2045 13.6705C2.41548 13.8815 2.70163 14 3 14H7.5C7.79837 14 8.08452 13.8815 8.2955 13.6705C8.50647 13.4595 8.625 13.1734 8.625 12.875C8.625 12.5766 8.50647 12.2905 8.2955 12.0795C8.08452 11.8685 7.79837 11.75 7.5 11.75ZM14.25 7.25H13.125V4.25C13.125 3.95163 13.0065 3.66548 12.7955 3.4545C12.5845 3.24353 12.2984 3.125 12 3.125C11.7016 3.125 11.4155 3.24353 11.2045 3.4545C10.9935 3.66548 10.875 3.95163 10.875 4.25V7.25H9.75C9.45163 7.25 9.16548 7.36853 8.9545 7.5795C8.74353 7.79048 8.625 8.07663 8.625 8.375C8.625 8.67337 8.74353 8.95952 8.9545 9.1705C9.16548 9.38147 9.45163 9.5 9.75 9.5H14.25C14.5484 9.5 14.8345 9.38147 15.0455 9.1705C15.2565 8.95952 15.375 8.67337 15.375 8.375C15.375 8.07663 15.2565 7.79048 15.0455 7.5795C14.8345 7.36853 14.5484 7.25 14.25 7.25Z"
+                                    fill="black"
+                                 />
+                              </svg>
+                              <!-- handle-filter mobile -->
+                              <svg
+                                 class="lg:hidden handle-filter"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 width="24"
+                                 height="25"
+                                 viewBox="0 0 24 25"
+                                 fill="none"
+                              >
+                                 <path
+                                    d="M19.5459 18.4541C19.7572 18.6654 19.876 18.952 19.876 19.2509C19.876 19.5498 19.7572 19.8365 19.5459 20.0478C19.3346 20.2592 19.0479 20.3779 18.749 20.3779C18.4501 20.3779 18.1635 20.2592 17.9521 20.0478L12 14.0937L6.0459 20.0459C5.83455 20.2573 5.54791 20.376 5.24902 20.376C4.95014 20.376 4.66349 20.2573 4.45215 20.0459C4.2408 19.8346 4.12207 19.5479 4.12207 19.2491C4.12207 18.9502 4.2408 18.6635 4.45215 18.4522L10.4062 12.5L4.45402 6.54593C4.24268 6.33459 4.12395 6.04795 4.12395 5.74906C4.12395 5.45017 4.24268 5.16353 4.45402 4.95218C4.66537 4.74084 4.95201 4.62211 5.2509 4.62211C5.54978 4.62211 5.83643 4.74084 6.04777 4.95218L12 10.9062L17.954 4.95125C18.1654 4.7399 18.452 4.62117 18.7509 4.62117C19.0498 4.62117 19.3364 4.7399 19.5478 4.95125C19.7591 5.16259 19.8778 5.44924 19.8778 5.74812C19.8778 6.04701 19.7591 6.33365 19.5478 6.545L13.5937 12.5L19.5459 18.4541Z"
+                                    fill="black"
+                                 />
+                              </svg>
                            </div>
-                           <ul class="collections pt-20 md:pt-0 pb-6 border-b grid grid-rows-5 gap-4">
+                        </div>
+                        <div class="flex flex-col gap-6 overflow-auto overscroll-contain scrollbar-hide">
+                           <ul class="collections pb-6 border-b grid grid-rows-5 gap-4">
                               <script id="template-collections" type="text/x-handlebars-template">
                                  {{#each items}}
                                     <li class='flex items-center justify-between opacity-60'>
@@ -207,16 +205,13 @@
                                  </svg>
                               </div>
                               <div class="gsap-collapse overflow-hidden">
-                                 <div
-                                    id="template-colors"
-                                    class="colors pt-0.5 pb-6 flex flex-wrap gap-4 lg:gap-y-4 lg:grid grid-cols-5"
-                                 >
+                                 <div id="template-colors" class="colors pt-0.5 pb-6 flex flex-wrap items-center gap-3">
                                     <!-- <script id="template-colors" type="text/x-handlebars-template"> -->
                                     {{#each items}}
-                                    <div class="color w-fit lg:w-full flex justify-center {{addActive @index 4}}">
+                                    <div class="color flex justify-center {{addActive @index 4}}">
                                        <div
                                           class="flex justify-center items-center w-9 h-9 rounded-full border-2 border-black/20
-                                                   {{class}}"
+                                                      {{class}}"
                                        >
                                           <div class="icon invisible opacity-0 transition-all ease-in duration-150">
                                              <svg
@@ -312,16 +307,16 @@
                                  </ul>
                               </div>
                            </div>
-
-                           <button class="block mx-auto w-full">
-                              <a
-                                 href=""
-                                 class="block text-sm font-medium px-20 py-3 border rounded-full bg-black text-white transition-all ease duration-300"
-                              >
-                                 Apply Filter
-                              </a>
-                           </button>
                         </div>
+
+                        <button class="block mx-auto w-full">
+                           <a
+                              href=""
+                              class="block text-sm font-medium w-full py-4 border rounded-full bg-black text-white transition-all ease duration-300"
+                           >
+                              Apply Filter
+                           </a>
+                        </button>
                      </div>
                   </div>
                   <!-- list products -->
