--- a/product-detail.html
+++ b/product-detail.html
@@ -473,7 +473,7 @@
                            <div class='flex items-center gap-x-1 sm:gap-x-3'>
                               <span class='text-xl lg:text-2xl font-bold'>${{price}}</span>
                               <span class='text-xl lg:text-2xl font-bold opacity-40 line-through'>{{cost}}</span>
-                              <span class='{{class}}'>{{discount}}</span>
+                              <span class='{{classDiscount}}'>{{discount}}</span>
                            </div>
                         </li>
                      {{/each}}
