fix bug momentum scroll on mobile

--- a/category.html
+++ b/category.html
@@ -83,7 +83,7 @@
                   <!-- filter -->
                   <div
                      id="filter"
-                     class="py-5 px-6 sm:h-screen lg:h-fit lg:w-1/4 lg:mr-5 rounded-tr-2xl rounded-tl-2xl sm:rounded-tl-none sm:rounded-r-xl lg:rounded-2xl border-2 bg-white invisible opacity-0 lg:visible lg:opacity-100 transition-all ease-out duration-500 fixed sm:w-80 inset-0 top-full sm:top-0 sm:-left-full lg:left-0 z-40 lg:z-0 lg:relative"
+                     class="py-5 px-6 sm:h-screen lg:h-fit lg:w-1/4 lg:mr-5 rounded-tr-2xl rounded-tl-2xl sm:rounded-tl-none sm:rounded-r-xl lg:rounded-2xl border-2 bg-white invisible opacity-0 lg:visible lg:opacity-100 transition-all ease-out duration-500 fixed sm:w-80 inset-0 top-full sm:top-0 sm:-left-full lg:left-0 z-50 lg:z-0 lg:relative"
                   >
                      <div class="h-full flex flex-col gap-6">
                         <div
@@ -120,7 +120,7 @@
                               </svg>
                            </div>
                         </div>
-                        <div class="flex flex-col gap-6 overflow-auto overscroll-contain scrollbar-hide">
+                        <div class="flex flex-col gap-6 overflow-y-auto overscroll-contain scrollbar-hide">
                            <ul class="collections pb-6 border-b grid grid-rows-5 gap-4">
                               <script id="template-collections" type="text/x-handlebars-template">
                                  {{#each items}}
