Add smooth scrolling to specific sections on the page

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
          </section>
          <!-- BRANDS -->
-         <section class="bg-black">
+         <section id="brands" class="scroll-mt-16 md:scroll-mt-20 bg-black">
             <div class="max-w-7xl mx-auto">
                <div class="px-4 lg:px-5">
                   <div class="paused overflow-hidden flex">
@@ -189,7 +189,7 @@
             </div>
          </section>
          <!-- NEW ARRIVALS -->
-         <section class="newArrivals">
+         <section id="newArrivals" class="scroll-mt-16 md:scroll-mt-20 newArrivals">
             <script id="template-newArrivals" type="text/x-handlebars-template">
                <div class='max-w-7xl mx-auto overflow-hidden'>
                   <div class='mx-4 lg:mx-5 pt-12 pb-10 lg:py-16 border-b'>
@@ -290,7 +290,7 @@
             </script>
          </section>
          <!-- TOP SELLING -->
-         <section class="topSelling">
+         <section id="topSelling" class="scroll-mt-16 md:scroll-mt-20 topSelling">
             <script id="template-topSelling" type="text/x-handlebars-template">
                <div class='max-w-7xl mx-auto overflow-hidden'>
                   <div class='mx-4 lg:mx-5 pt-12 pb-10 lg:py-16'>
