--- a/public/header.html
+++ b/public/header.html
@@ -56,9 +56,9 @@
             <ul id="template-nav" class="nav flex justify-between gap-x-6">
                {{#each items}}
                <li
-                  class="py-3 border-b-2 border-white text-center text-base cursor-pointer hover:bg-white lg::bg-none transition-all ease-in duration-150"
+                  class="border-b-2 border-white text-center text-base cursor-pointer hover:bg-white lg::bg-none transition-all ease-in duration-150"
                >
-                  <a class="block lg:hover:drop-shadow-[0px_6px_4px_rgba(0,0,0,0.4)]" href="">{{a}}</a>
+                  <a class="py-3 block lg:hover:drop-shadow-[0px_6px_4px_rgba(0,0,0,0.4)]" href="{{href}}">{{a}}</a>
                </li>
                {{/each}}
             </ul>
@@ -120,11 +120,15 @@
 ></div>
 <div
    id="menu"
-   class="lg:hidden absolute z-40 top-full h-fit w-full bg-white invisible opacity-0 -left-32 transition-all duration-500 ease-out"
+   class="handle-menu lg:hidden absolute z-40 top-full h-fit w-full bg-white invisible opacity-0 -left-32 transition-all duration-500 ease-out"
 >
    <ul id="template-shop-responsive" class="shop-responsive bg-[#F2F0F1]">
       <li class="border-b-2 border-white">
-         <div id="Shop" class="handle-gsap group p-3 flex hover:bg-black transition-all ease-in duration-150">
+         <div
+            id="Shop"
+            class="handle-gsap group p-3 flex hover:bg-black transition-all ease-in duration-150"
+            onclick="globalFn.stopPagination(event)"
+         >
             <div class="w-1/2"></div>
             <div class="w-1/2 flex items-center justify-between">
                <span class="-translate-x-1/2 group-hover:text-white font-semibold">Shop</span>
@@ -151,6 +155,7 @@
                <div
                   id="{{span}}"
                   class="handle-gsap group p-3 flex hover:bg-[#F2F0F1] transition-all ease-in duration-150"
+                  onclick="globalFn.stopPagination(event)"
                >
                   <div class="w-1/2"></div>
                   <div class="w-1/2 flex justify-between items-center">
